Edit code to make duck image recognizable
minor edits

--- a/duck_hunter.ipynb
+++ b/duck_hunter.ipynb
@@ -5,7 +5,44 @@
    "execution_count": null,
    "id": "eab66318",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.3)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "import sys\n",
@@ -17,56 +54,86 @@
     "# Screen dimensions\n",
     "WIDTH, HEIGHT = 800, 600\n",
     "SCREEN = pygame.display.set_mode((WIDTH, HEIGHT))\n",
-    "pygame.display.set_caption('Duck Hunter')\n",
+    "pygame.display.set_caption('Duck Hunter (Mallard Edition)')\n",
     "\n",
     "# Colors\n",
     "WHITE = (255, 255, 255)\n",
     "BLACK = (0, 0, 0)\n",
+    "SKY_BLUE = (135, 206, 235)\n",
+    "MALLARD_BODY = (139, 69, 19)       # Brown chest\n",
+    "MALLARD_WING = (200, 200, 200)     # Grey body\n",
+    "MALLARD_HEAD = (0, 128, 0)         # Green head\n",
+    "MALLARD_BILL = (255, 215, 0)       # Yellow bill\n",
     "\n",
     "# Game settings\n",
     "FPS = 60\n",
-    "DUCK_SIZE = (60, 45)\n",
-    "SHOT_RADIUS = 20\n",
+    "DUCK_WIDTH, DUCK_HEIGHT = 60, 45\n",
     "GAME_DURATION = 30  # seconds\n",
     "\n",
-    "# Load assets\n",
-    "DUCK_IMG = pygame.transform.scale(pygame.image.load('duck.png'), DUCK_SIZE)\n",
-    "CROSSHAIR_IMG = pygame.image.load('crosshair.png')\n",
-    "FONT = pygame.font.SysFont('Arial', 32)\n",
-    "\n",
-    "# Duck class\n",
     "class Duck:\n",
     "    def __init__(self):\n",
-    "        self.x = -DUCK_SIZE[0]\n",
-    "        self.y = random.randint(50, HEIGHT - 100)\n",
-    "        self.speed = random.uniform(2, 5)\n",
-    "        self.image = DUCK_IMG\n",
-    "        self.rect = pygame.Rect(self.x, self.y, DUCK_SIZE[0], DUCK_SIZE[1])\n",
+    "        x = -DUCK_WIDTH\n",
+    "        y = random.randint(50, HEIGHT - 100)\n",
+    "        speed = random.uniform(2, 5)\n",
+    "        self.rect = pygame.Rect(x, y, DUCK_WIDTH, DUCK_HEIGHT)\n",
+    "        self.speed = speed\n",
     "\n",
     "    def move(self):\n",
-    "        self.x += self.speed\n",
-    "        self.rect.x = int(self.x)\n",
+    "        self.rect.x += self.speed\n",
     "\n",
     "    def draw(self, screen):\n",
-    "        screen.blit(self.image, (self.rect.x, self.rect.y))\n",
+    "        body = self.rect\n",
+    "        # Body (grey)\n",
+    "        pygame.draw.ellipse(screen, MALLARD_WING, body)\n",
+    "        # Chest (brown)\n",
+    "        chest = pygame.Rect(body.x + int(body.width*0.1),\n",
+    "                            body.y + int(body.height*0.4),\n",
+    "                            int(body.width*0.5), int(body.height*0.4))\n",
+    "        pygame.draw.ellipse(screen, MALLARD_BODY, chest)\n",
+    "        # Head (green)\n",
+    "        head_center = (body.x + int(body.width*0.8), body.y + int(body.height*0.3))\n",
+    "        pygame.draw.circle(screen, MALLARD_HEAD, head_center, int(body.height*0.35))\n",
+    "        # Neck ring (white)\n",
+    "        pygame.draw.circle(screen, WHITE,\n",
+    "                           (head_center[0] - int(body.height*0.05), head_center[1]),\n",
+    "                           int(body.height*0.2), 3)\n",
+    "        # Bill (yellow)\n",
+    "        bill = [\n",
+    "            (head_center[0] + int(body.height*0.35), head_center[1]),\n",
+    "            (head_center[0] + int(body.height*0.5), head_center[1] - int(body.height*0.1)),\n",
+    "            (head_center[0] + int(body.height*0.5), head_center[1] + int(body.height*0.1))\n",
+    "        ]\n",
+    "        pygame.draw.polygon(screen, MALLARD_BILL, bill)\n",
     "\n",
-    "# Main game loop\n",
+    "def draw_crosshair(screen, pos):\n",
+    "    x, y = pos\n",
+    "    length = 20\n",
+    "    color = (200, 0, 0)\n",
+    "    pygame.draw.line(screen, color, (x - length, y), (x + length, y), 2)\n",
+    "    pygame.draw.line(screen, color, (x, y - length), (x, y + length), 2)\n",
+    "    pygame.draw.circle(screen, color, pos, length, 1)\n",
+    "\n",
+    "def draw_hud(screen, score, time_left, font):\n",
+    "    score_text = font.render(f\"Score: {score}\", True, BLACK)\n",
+    "    time_text = font.render(f\"Time: {int(time_left)}\", True, BLACK)\n",
+    "    screen.blit(score_text, (10, 10))\n",
+    "    screen.blit(time_text, (WIDTH - 150, 10))\n",
+    "\n",
     "def main():\n",
     "    clock = pygame.time.Clock()\n",
+    "    font = pygame.font.SysFont('Arial', 32)\n",
     "    score = 0\n",
     "    start_ticks = pygame.time.get_ticks()\n",
-    "\n",
     "    ducks = [Duck()]\n",
-    "    crosshair = CROSSHAIR_IMG\n",
-    "\n",
     "    running = True\n",
+    "\n",
     "    while running:\n",
     "        dt = clock.tick(FPS) / 1000\n",
     "        elapsed = (pygame.time.get_ticks() - start_ticks) / 1000\n",
-    "        if elapsed >= GAME_DURATION:\n",
+    "        time_left = GAME_DURATION - elapsed\n",
+    "        if time_left <= 0:\n",
     "            running = False\n",
     "\n",
-    "        # Event handling\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                pygame.quit()\n",
@@ -79,37 +146,24 @@
     "                        ducks.remove(duck)\n",
     "                        break\n",
     "\n",
-    "        # Spawn ducks\n",
     "        if random.random() < 0.01:\n",
     "            ducks.append(Duck())\n",
     "\n",
-    "        # Move ducks\n",
     "        for duck in ducks[:]:\n",
     "            duck.move()\n",
-    "            if duck.x > WIDTH:\n",
+    "            if duck.rect.x > WIDTH:\n",
     "                ducks.remove(duck)\n",
     "\n",
-    "        # Draw\n",
-    "        SCREEN.fill((135, 206, 235))  # sky blue\n",
+    "        SCREEN.fill(SKY_BLUE)\n",
     "        for duck in ducks:\n",
     "            duck.draw(SCREEN)\n",
-    "        # Draw crosshair\n",
-    "        mx, my = pygame.mouse.get_pos()\n",
-    "        rect = crosshair.get_rect(center=(mx, my))\n",
-    "        SCREEN.blit(crosshair, rect)\n",
-    "\n",
-    "        # Draw score and timer\n",
-    "        score_text = FONT.render(f\"Score: {score}\", True, BLACK)\n",
-    "        time_text = FONT.render(f\"Time: {int(GAME_DURATION - elapsed)}\", True, BLACK)\n",
-    "        SCREEN.blit(score_text, (10, 10))\n",
-    "        SCREEN.blit(time_text, (WIDTH - 150, 10))\n",
-    "\n",
+    "        draw_crosshair(SCREEN, pygame.mouse.get_pos())\n",
+    "        draw_hud(SCREEN, score, time_left, font)\n",
     "        pygame.display.flip()\n",
     "\n",
-    "    # Game over screen\n",
     "    SCREEN.fill(BLACK)\n",
-    "    over_text = FONT.render(f\"Game Over! Final Score: {score}\", True, WHITE)\n",
-    "    SCREEN.blit(over_text, (WIDTH//2 - over_text.get_width()//2, HEIGHT//2))\n",
+    "    over_text = font.render(f\"Game Over! Final Score: {score}\", True, WHITE)\n",
+    "    SCREEN.blit(over_text, (WIDTH//2 - over_text.get_width()//2, HEIGHT//2 - 20))\n",
     "    pygame.display.flip()\n",
     "    pygame.time.delay(3000)\n",
     "    pygame.quit()\n",
@@ -118,6 +172,22 @@
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "678a9285",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8ad9a09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -127,7 +197,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
