tweak code to allow replay option

--- a/duck_hunter.ipynb
+++ b/duck_hunter.ipynb
@@ -44,6 +44,12 @@
     }
    ],
    "source": [
+    "# This code is a simple duck hunting game where the player clicks on ducks to score points.\n",
+    "# The game features a mallard duck design, a crosshair for aiming, and a HUD displaying the score and time left.\n",
+    "# The game ends after a set duration, and the final score is displayed.\n",
+    "# The game is implemented using Pygame, a popular library for creating games in Python.\n",
+    "# The code includes classes and functions for managing the game state, drawing graphics, and handling user input.\n",
+    "\n",
     "import pygame\n",
     "import sys\n",
     "import random\n",
@@ -64,6 +70,7 @@
     "MALLARD_WING = (200, 200, 200)     # Grey body\n",
     "MALLARD_HEAD = (0, 128, 0)         # Green head\n",
     "MALLARD_BILL = (255, 215, 0)       # Yellow bill\n",
+    "CROSSHAIR_COLOR = (200, 0, 0)\n",
     "\n",
     "# Game settings\n",
     "FPS = 60\n",
@@ -83,56 +90,57 @@
     "\n",
     "    def draw(self, screen):\n",
     "        body = self.rect\n",
-    "        # Body (grey)\n",
-    "        pygame.draw.ellipse(screen, MALLARD_WING, body)\n",
-    "        # Chest (brown)\n",
-    "        chest = pygame.Rect(body.x + int(body.width*0.1),\n",
-    "                            body.y + int(body.height*0.4),\n",
-    "                            int(body.width*0.5), int(body.height*0.4))\n",
-    "        pygame.draw.ellipse(screen, MALLARD_BODY, chest)\n",
-    "        # Head (green)\n",
-    "        head_center = (body.x + int(body.width*0.8), body.y + int(body.height*0.3))\n",
-    "        pygame.draw.circle(screen, MALLARD_HEAD, head_center, int(body.height*0.35))\n",
-    "        # Neck ring (white)\n",
-    "        pygame.draw.circle(screen, WHITE,\n",
-    "                           (head_center[0] - int(body.height*0.05), head_center[1]),\n",
-    "                           int(body.height*0.2), 3)\n",
-    "        # Bill (yellow)\n",
+    "        pygame.draw.ellipse(screen, MALLARD_WING, body)  # body\n",
+    "        chest = pygame.Rect(\n",
+    "            body.x + int(body.width * 0.1),\n",
+    "            body.y + int(body.height * 0.4),\n",
+    "            int(body.width * 0.5), int(body.height * 0.4)\n",
+    "        )\n",
+    "        pygame.draw.ellipse(screen, MALLARD_BODY, chest)  # chest\n",
+    "        head_center = (\n",
+    "            body.x + int(body.width * 0.8),\n",
+    "            body.y + int(body.height * 0.3)\n",
+    "        )\n",
+    "        pygame.draw.circle(screen, MALLARD_HEAD, head_center, int(body.height * 0.35))  # head\n",
+    "        pygame.draw.circle(\n",
+    "            screen, WHITE,\n",
+    "            (head_center[0] - int(body.height * 0.05), head_center[1]),\n",
+    "            int(body.height * 0.2), 3\n",
+    "        )  # neck ring\n",
     "        bill = [\n",
-    "            (head_center[0] + int(body.height*0.35), head_center[1]),\n",
-    "            (head_center[0] + int(body.height*0.5), head_center[1] - int(body.height*0.1)),\n",
-    "            (head_center[0] + int(body.height*0.5), head_center[1] + int(body.height*0.1))\n",
+    "            (head_center[0] + int(body.height * 0.35), head_center[1]),\n",
+    "            (head_center[0] + int(body.height * 0.5), head_center[1] - int(body.height * 0.1)),\n",
+    "            (head_center[0] + int(body.height * 0.5), head_center[1] + int(body.height * 0.1))\n",
     "        ]\n",
-    "        pygame.draw.polygon(screen, MALLARD_BILL, bill)\n",
+    "        pygame.draw.polygon(screen, MALLARD_BILL, bill)  # bill\n",
+    "\n",
     "\n",
     "def draw_crosshair(screen, pos):\n",
     "    x, y = pos\n",
     "    length = 20\n",
-    "    color = (200, 0, 0)\n",
-    "    pygame.draw.line(screen, color, (x - length, y), (x + length, y), 2)\n",
-    "    pygame.draw.line(screen, color, (x, y - length), (x, y + length), 2)\n",
-    "    pygame.draw.circle(screen, color, pos, length, 1)\n",
+    "    pygame.draw.line(screen, CROSSHAIR_COLOR, (x - length, y), (x + length, y), 2)\n",
+    "    pygame.draw.line(screen, CROSSHAIR_COLOR, (x, y - length), (x, y + length), 2)\n",
+    "    pygame.draw.circle(screen, CROSSHAIR_COLOR, pos, length, 1)\n",
+    "\n",
     "\n",
     "def draw_hud(screen, score, time_left, font):\n",
     "    score_text = font.render(f\"Score: {score}\", True, BLACK)\n",
     "    time_text = font.render(f\"Time: {int(time_left)}\", True, BLACK)\n",
     "    screen.blit(score_text, (10, 10))\n",
-    "    screen.blit(time_text, (WIDTH - 150, 10))\n",
+    "    screen.blit(time_text, (WIDTH // 2 - time_text.get_width() // 2, 10))\n",
     "\n",
-    "def main():\n",
+    "\n",
+    "def game_loop():\n",
     "    clock = pygame.time.Clock()\n",
     "    font = pygame.font.SysFont('Arial', 32)\n",
     "    score = 0\n",
     "    start_ticks = pygame.time.get_ticks()\n",
     "    ducks = [Duck()]\n",
-    "    running = True\n",
     "\n",
-    "    while running:\n",
+    "    while True:\n",
     "        dt = clock.tick(FPS) / 1000\n",
     "        elapsed = (pygame.time.get_ticks() - start_ticks) / 1000\n",
     "        time_left = GAME_DURATION - elapsed\n",
-    "        if time_left <= 0:\n",
-    "            running = False\n",
     "\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
@@ -145,6 +153,9 @@
     "                        score += 1\n",
     "                        ducks.remove(duck)\n",
     "                        break\n",
+    "\n",
+    "        if time_left <= 0:\n",
+    "            return score\n",
     "\n",
     "        if random.random() < 0.01:\n",
     "            ducks.append(Duck())\n",
@@ -161,13 +172,33 @@
     "        draw_hud(SCREEN, score, time_left, font)\n",
     "        pygame.display.flip()\n",
     "\n",
-    "    SCREEN.fill(BLACK)\n",
-    "    over_text = font.render(f\"Game Over! Final Score: {score}\", True, WHITE)\n",
-    "    SCREEN.blit(over_text, (WIDTH//2 - over_text.get_width()//2, HEIGHT//2 - 20))\n",
-    "    pygame.display.flip()\n",
-    "    pygame.time.delay(3000)\n",
-    "    pygame.quit()\n",
-    "    sys.exit()\n",
+    "\n",
+    "def main():\n",
+    "    font = pygame.font.SysFont('Arial', 32)\n",
+    "    while True:\n",
+    "        score = game_loop()\n",
+    "\n",
+    "        # Game Over menu\n",
+    "        SCREEN.fill(BLACK)\n",
+    "        over_text = font.render(f\"Game Over! Score: {score}\", True, WHITE)\n",
+    "        retry_text = font.render(\"Press R to Retry or Q to Quit\", True, WHITE)\n",
+    "        SCREEN.blit(over_text, (WIDTH // 2 - over_text.get_width() // 2, HEIGHT // 2 - 40))\n",
+    "        SCREEN.blit(retry_text, (WIDTH // 2 - retry_text.get_width() // 2, HEIGHT // 2 + 10))\n",
+    "        pygame.display.flip()\n",
+    "\n",
+    "        waiting = True\n",
+    "        while waiting:\n",
+    "            for event in pygame.event.get():\n",
+    "                if event.type == pygame.QUIT:\n",
+    "                    pygame.quit()\n",
+    "                    sys.exit()\n",
+    "                if event.type == pygame.KEYDOWN:\n",
+    "                    if event.key == pygame.K_r:\n",
+    "                        waiting = False  # restart loop\n",
+    "                    if event.key == pygame.K_q:\n",
+    "                        pygame.quit()\n",
+    "                        sys.exit()\n",
+    "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()\n"
@@ -176,18 +207,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678a9285",
+   "id": "95d365ae",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8ad9a09",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\"\""
+   ]
   }
  ],
  "metadata": {
